nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
spec:
  rules:
  - host: "spring-demo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: spring-demo
            port:
              number: 80
      - pathType: Prefix
        path: "/debug"
        backend:
          service:
            name: spring-demo
            port:
              number: 80
